# cs4380-emulator-assembler

./: CMakeLists.txt  README.md
assembler/: .gitignore  asm4380.py  asm_types.py  states.py  test_states.py
assembler/system_test/: hex_to_bin.sh  system_test.py
assembler/system_test/expected_hex/: byt_char_directive  byt_integer_directive  directive_variations  instructions  int_directive  jmp_to_lbl  simply_exit
assembler/system_test/input/: bunch_of_comments.asm  byt_char_directive.asm  byt_integer_directive.asm  directive_in_code_section.asm  directive_variations.asm  instructions.asm  int_directive.asm  jmp_to_lbl.asm  simply_exit.asm
assembler/system_test/input_err/: BYT_too_big.asm  dollsign_label_start.asm  extra_directive_line.asm  extra_instruction_line.asm  instruction_at_linestart.asm  invalid_directive.asm  invalid_escape_char.asm  invalid_instruction.asm  missing_label.asm  missing_operand.asm  numeric_too_big.asm  signed_BYT.asm  underscore_label_start.asm
include/: emu4380.h
src/: emu4380.cpp  main.cpp
system_test/: runSystemTests.sh
system_test/hex/: exit  invalid_operation  trp1_prints_R3  trp1_prints_negative_R3  trp1_prints_positive_R3  trp2_reads_int  trp3_writes_char  trp4_correct_value  trp4_reads_char  trp4_successive_reads  trp98
test/: tests.cpp
